# dms

./: .gitignore  .gitmodules  Deployment.md  Makefile  Readme.md  pyproject.toml  setup.cfg
.github/workflows/: format.yml  lint.yml  pytest.yml
api/: .gitignore  pyproject.toml  setup.cfg
api/.github/workflows/: lint.yml
api/db/: init-data.bash
api/integrated-tests/: init.bash
api/integrated-tests/fs/: embeddings.txt
api/src/api/: __init__.py  config.py  database.py
api/src/api/views/: auth.py  filter_task.py  train_task.py  verify.py  visualize.py
api/src/api/word2vec/: word2vec.py
api/src/api/workers/: trainer.py
api/tests/: conftest.py  test_healthcheck.py  test_openapi.py  test_register.py  test_visualize.py  test_word2vec.py  test_worker.py
db/: init-data.bash  rules.mk
integrated-tests/: Readme.md  clear-db.sql  schema.sql
ngram-word2vec/scripts/: download.py
scripts/: build-docker.bash  run-pipeline.bash
src/api/: __init__.py  authentication.py  config.py  database.py  mail.py  schemas.py
src/api/views/: analogy_test_task.py  auth.py  filter_task.py  filterpaper.py  healthcheck.py  register.py  train_task.py  verify.py  visualize.py  wc.py
src/api/word2vec/: stopwords.py  word2vec.py
src/api/workers/: filterer.py  trainer.py  worker.py
src/word2vec_wrapper/: __init__.py
tests/: conftest.py  test_analogy_test_task.py  test_auth.py  test_auth_plugin.py  test_filter_task.py  test_filterpaper.py  test_healthcheck.py  test_openapi.py  test_register.py  test_train_task.py  test_verify.py  test_visualize.py  test_word2vec.py  test_worker.py
word2vec/: word2vec_kernels.cc  word2vec_optimized.py
word2vec_wrapper/: .gitignore  Makefile  setup.cfg
word2vec_wrapper/scripts/: run-docker.bash
word2vec_wrapper/src/word2vec_wrapper/: __init__.py  word2vec.Dockerfile
