[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
src_paths = ["src", "test"]

[tool.pylint.master]
load-plugins = [
    "pylint_flask_sqlalchemy",
    "pylint_pytest",
]
# A hack to get rid of a bunch of errors that pylint-flask-sqlalchemy really
# should deal with but apparently does not
ignored-classes = ["scoped_session"]

[tool.pylint.messages_control]
disable = [
    # For black
    "bad-continuation",
    "bad-whitespace",
    # General annoyances
    "assigning-non-slot",  # For SQLAlchemy
    "duplicate-code",  # Appears to catch duplicate imports??
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "no-self-use",  # For flask MethodView
    "too-few-public-methods",
]

[tool.pylint.format]
max-line-length = "88"
