[metadata]
name = word2vec_wrapper
version = 0.0.1

[options]
package_dir=
    =src
packages=find:
install_requires = 
    docker
    logzero
include_package_data = True

[options.packages.find]
where=src

[options.package_data]
* = data/word2vec-image.tar

[options.extras_require]
dev =
    black
    isort
    pylint
    pylint-pytest
    pytest
