[metadata]
name = api
version = 0.0.1

[options]
package_dir=
    =src
packages=find:
install_requires = 
    argon2-cffi
    flask
    flask_mail
    flask_sqlalchemy
    flask-cors
    flask-smorest
    logzero
    marshmallow
    marshmallow-sqlalchemy
    psycopg2
    sqlalchemy
    tqdm
    word2vec_wrapper @ git+https://github.com/ECE493Group13/word2vec_wrapper

[options.packages.find]
where=src

[options.extras_require]
dev =
    black
    freezegun
    isort
    pylint
    pylint-flask-sqlalchemy
    pylint-pytest
    pytest
