[metadata]
name = word2vec_wrapper
version = 1.0.1

[options]
package_dir=
    =src
packages=find:
install_requires = 
    docker
    logzero
include_package_data = True

[options.packages.find]
where=src

[options.extras_require]
dev =
    black
    isort
    pylint
    pylint-pytest
    pytest

# A dumb hack
[options.package_data]
* =
    word2vec.Dockerfile
    ngram-word2vec/
    ngram-word2vec/ngram.JPG
    ngram-word2vec/LICENSE
    ngram-word2vec/.git
    ngram-word2vec/word2vec
    ngram-word2vec/word2vec/word2vec_ops.cc
    ngram-word2vec/word2vec/plot_sim.py
    ngram-word2vec/word2vec/word2vec_kernels.cc
    ngram-word2vec/word2vec/word2vec_optimized_test.py
    ngram-word2vec/word2vec/word2vec
    ngram-word2vec/word2vec/word2vec/trunk
    ngram-word2vec/word2vec/word2vec/trunk/demo-phrase-accuracy.sh
    ngram-word2vec/word2vec/word2vec/trunk/demo-word.sh
    ngram-word2vec/word2vec/word2vec/trunk/LICENSE
    ngram-word2vec/word2vec/word2vec/trunk/.svn
    ngram-word2vec/word2vec/word2vec/trunk/.svn/text-base
    ngram-word2vec/word2vec/word2vec/trunk/.svn/text-base/demo-phrases.sh.svn-base
    ngram-word2vec/word2vec/word2vec/trunk/.svn/text-base/demo-analogy.sh.svn-base
    ngram-word2vec/word2vec/word2vec/trunk/.svn/text-base/README.txt.svn-base
    ngram-word2vec/word2vec/word2vec/trunk/.svn/text-base/questions-phrases.txt.svn-base
    ngram-word2vec/word2vec/word2vec/trunk/.svn/text-base/demo-classes.sh.svn-base
    ngram-word2vec/word2vec/word2vec/trunk/.svn/text-base/compute-accuracy.c.svn-base
    ngram-word2vec/word2vec/word2vec/trunk/.svn/text-base/demo-train-big-model-v1.sh.svn-base
    ngram-word2vec/word2vec/word2vec/trunk/.svn/text-base/LICENSE.svn-base
    ngram-word2vec/word2vec/word2vec/trunk/.svn/text-base/distance.c.svn-base
    ngram-word2vec/word2vec/word2vec/trunk/.svn/text-base/word2phrase.c.svn-base
    ngram-word2vec/word2vec/word2vec/trunk/.svn/text-base/demo-word-accuracy.sh.svn-base
    ngram-word2vec/word2vec/word2vec/trunk/.svn/text-base/questions-words.txt.svn-base
    ngram-word2vec/word2vec/word2vec/trunk/.svn/text-base/demo-phrase-accuracy.sh.svn-base
    ngram-word2vec/word2vec/word2vec/trunk/.svn/text-base/word2vec.c.svn-base
    ngram-word2vec/word2vec/word2vec/trunk/.svn/text-base/makefile.svn-base
    ngram-word2vec/word2vec/word2vec/trunk/.svn/text-base/word-analogy.c.svn-base
    ngram-word2vec/word2vec/word2vec/trunk/.svn/text-base/demo-word.sh.svn-base
    ngram-word2vec/word2vec/word2vec/trunk/.svn/entries
    ngram-word2vec/word2vec/word2vec/trunk/.svn/all-wcprops
    ngram-word2vec/word2vec/word2vec/trunk/.svn/prop-base
    ngram-word2vec/word2vec/word2vec/trunk/.svn/prop-base/demo-train-big-model-v1.sh.svn-base
    ngram-word2vec/word2vec/word2vec/trunk/word2phrase.c
    ngram-word2vec/word2vec/word2vec/trunk/word-analogy.c
    ngram-word2vec/word2vec/word2vec/trunk/questions-phrases.txt
    ngram-word2vec/word2vec/word2vec/trunk/demo-word-accuracy.sh
    ngram-word2vec/word2vec/word2vec/trunk/word2vec.c
    ngram-word2vec/word2vec/word2vec/trunk/demo-classes.sh
    ngram-word2vec/word2vec/word2vec/trunk/demo-phrases.sh
    ngram-word2vec/word2vec/word2vec/trunk/compute-accuracy.c
    ngram-word2vec/word2vec/word2vec/trunk/demo-analogy.sh
    ngram-word2vec/word2vec/word2vec/trunk/questions-words.txt
    ngram-word2vec/word2vec/word2vec/trunk/demo-train-big-model-v1.sh
    ngram-word2vec/word2vec/word2vec/trunk/distance.c
    ngram-word2vec/word2vec/word2vec/trunk/README.txt
    ngram-word2vec/word2vec/word2vec/trunk/makefile
    ngram-word2vec/word2vec/run.sh
    ngram-word2vec/word2vec/word2vec_eval.py
    ngram-word2vec/word2vec/plot.py
    ngram-word2vec/word2vec/__init__.py
    ngram-word2vec/word2vec/README.md
    ngram-word2vec/word2vec/word2vec_test.py
    ngram-word2vec/word2vec/word2vec_ops.so
    ngram-word2vec/word2vec/word2vec_optimized.py
    ngram-word2vec/word2vec/eval_run.bash
    ngram-word2vec/word2vec/word2vec.py
    ngram-word2vec/distributed_train
    ngram-word2vec/distributed_train/get_result.py
    ngram-word2vec/distributed_train/plot_sim.py
    ngram-word2vec/distributed_train/read_credentials.py
    ngram-word2vec/distributed_train/stop_training_batch.py
    ngram-word2vec/distributed_train/good_hosts_example
    ngram-word2vec/distributed_train/plot.py
    ngram-word2vec/distributed_train/README.md
    ngram-word2vec/distributed_train/train_batch.py
    ngram-word2vec/distributed_train/scp_data_code_batch.py
    ngram-word2vec/distributed_train/eval_run_batch.py
    ngram-word2vec/README.md
    ngram-word2vec/scripts
    ngram-word2vec/scripts/process.py
    ngram-word2vec/scripts/merge_year.py
    ngram-word2vec/scripts/download.py
    ngram-word2vec/scripts/README.md
    ngram-word2vec/scripts/run_pipeline.sh
    ngram-word2vec/scripts/decompress.py
    ngram-word2vec/.gitignore
    ngram-word2vec/
    ngram-word2vec/ngram.JPG
    ngram-word2vec/LICENSE
    ngram-word2vec/.git
    ngram-word2vec/word2vec
    ngram-word2vec/word2vec/word2vec_ops.cc
    ngram-word2vec/word2vec/plot_sim.py
    ngram-word2vec/word2vec/word2vec_kernels.cc
    ngram-word2vec/word2vec/word2vec_optimized_test.py
    ngram-word2vec/word2vec/word2vec
    ngram-word2vec/word2vec/word2vec/trunk
    ngram-word2vec/word2vec/word2vec/trunk/demo-phrase-accuracy.sh
    ngram-word2vec/word2vec/word2vec/trunk/demo-word.sh
    ngram-word2vec/word2vec/word2vec/trunk/LICENSE
    ngram-word2vec/word2vec/word2vec/trunk/.svn
    ngram-word2vec/word2vec/word2vec/trunk/.svn/text-base
    ngram-word2vec/word2vec/word2vec/trunk/.svn/text-base/demo-phrases.sh.svn-base
    ngram-word2vec/word2vec/word2vec/trunk/.svn/text-base/demo-analogy.sh.svn-base
    ngram-word2vec/word2vec/word2vec/trunk/.svn/text-base/README.txt.svn-base
    ngram-word2vec/word2vec/word2vec/trunk/.svn/text-base/questions-phrases.txt.svn-base
    ngram-word2vec/word2vec/word2vec/trunk/.svn/text-base/demo-classes.sh.svn-base
    ngram-word2vec/word2vec/word2vec/trunk/.svn/text-base/compute-accuracy.c.svn-base
    ngram-word2vec/word2vec/word2vec/trunk/.svn/text-base/demo-train-big-model-v1.sh.svn-base
    ngram-word2vec/word2vec/word2vec/trunk/.svn/text-base/LICENSE.svn-base
    ngram-word2vec/word2vec/word2vec/trunk/.svn/text-base/distance.c.svn-base
    ngram-word2vec/word2vec/word2vec/trunk/.svn/text-base/word2phrase.c.svn-base
    ngram-word2vec/word2vec/word2vec/trunk/.svn/text-base/demo-word-accuracy.sh.svn-base
    ngram-word2vec/word2vec/word2vec/trunk/.svn/text-base/questions-words.txt.svn-base
    ngram-word2vec/word2vec/word2vec/trunk/.svn/text-base/demo-phrase-accuracy.sh.svn-base
    ngram-word2vec/word2vec/word2vec/trunk/.svn/text-base/word2vec.c.svn-base
    ngram-word2vec/word2vec/word2vec/trunk/.svn/text-base/makefile.svn-base
    ngram-word2vec/word2vec/word2vec/trunk/.svn/text-base/word-analogy.c.svn-base
    ngram-word2vec/word2vec/word2vec/trunk/.svn/text-base/demo-word.sh.svn-base
    ngram-word2vec/word2vec/word2vec/trunk/.svn/entries
    ngram-word2vec/word2vec/word2vec/trunk/.svn/all-wcprops
    ngram-word2vec/word2vec/word2vec/trunk/.svn/prop-base
    ngram-word2vec/word2vec/word2vec/trunk/.svn/prop-base/demo-train-big-model-v1.sh.svn-base
    ngram-word2vec/word2vec/word2vec/trunk/word2phrase.c
    ngram-word2vec/word2vec/word2vec/trunk/word-analogy.c
    ngram-word2vec/word2vec/word2vec/trunk/questions-phrases.txt
    ngram-word2vec/word2vec/word2vec/trunk/demo-word-accuracy.sh
    ngram-word2vec/word2vec/word2vec/trunk/word2vec.c
    ngram-word2vec/word2vec/word2vec/trunk/demo-classes.sh
    ngram-word2vec/word2vec/word2vec/trunk/demo-phrases.sh
    ngram-word2vec/word2vec/word2vec/trunk/compute-accuracy.c
    ngram-word2vec/word2vec/word2vec/trunk/demo-analogy.sh
    ngram-word2vec/word2vec/word2vec/trunk/questions-words.txt
    ngram-word2vec/word2vec/word2vec/trunk/demo-train-big-model-v1.sh
    ngram-word2vec/word2vec/word2vec/trunk/distance.c
    ngram-word2vec/word2vec/word2vec/trunk/README.txt
    ngram-word2vec/word2vec/word2vec/trunk/makefile
    ngram-word2vec/word2vec/run.sh
    ngram-word2vec/word2vec/word2vec_eval.py
    ngram-word2vec/word2vec/plot.py
    ngram-word2vec/word2vec/__init__.py
    ngram-word2vec/word2vec/README.md
    ngram-word2vec/word2vec/word2vec_test.py
    ngram-word2vec/word2vec/word2vec_ops.so
    ngram-word2vec/word2vec/word2vec_optimized.py
    ngram-word2vec/word2vec/eval_run.bash
    ngram-word2vec/word2vec/word2vec.py
    ngram-word2vec/distributed_train
    ngram-word2vec/distributed_train/get_result.py
    ngram-word2vec/distributed_train/plot_sim.py
    ngram-word2vec/distributed_train/read_credentials.py
    ngram-word2vec/distributed_train/stop_training_batch.py
    ngram-word2vec/distributed_train/good_hosts_example
    ngram-word2vec/distributed_train/plot.py
    ngram-word2vec/distributed_train/README.md
    ngram-word2vec/distributed_train/train_batch.py
    ngram-word2vec/distributed_train/scp_data_code_batch.py
    ngram-word2vec/distributed_train/eval_run_batch.py
    ngram-word2vec/README.md
    ngram-word2vec/scripts
    ngram-word2vec/scripts/process.py
    ngram-word2vec/scripts/merge_year.py
    ngram-word2vec/scripts/download.py
    ngram-word2vec/scripts/README.md
    ngram-word2vec/scripts/run_pipeline.sh
    ngram-word2vec/scripts/decompress.py
    ngram-word2vec/.gitignore
